apps/media/homarr/homarr-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homarr-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: "127.0.0.1"
      X-Forwarded-Proto: "http"
      X-Forwarded-Host: "homarr.catacumbas69.com:8080"
      X-Forwarded-Port: "8080"
