apps/media/homarr/homarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v2.0.0 # {"$imagepolicy": "flux-system:homarr"}
          ports:
            - containerPort: 7575
          volumeMounts:
            - name: config
              mountPath: /appdata
            - name: icons
              mountPath: /app/public/icons
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homarr-config
        - name: icons
          emptyDir: {}
