apps/media/homarr/homarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: homarr
  ports:
    - name: http
      port: 7575
      targetPort: 7575
