apps/media/homarr/homarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homarr.catacumbas69.com`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
